<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/pref_nbWeeks"
        android:inputType="number"
        android:key="nbWeeks"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:title="@string/pref_title_nbWeeks" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_cacheReload"
        android:summary="@string/pref_cacheReload"
        android:title="@string/pref_title_cacheReload" />

    <PreferenceCategory android:title="Thème">

        <com.thebluealliance.spectrum.SpectrumPreference
            android:defaultValue="@color/md_blue_grey_500"
            android:key="pref_theme_colorNote"
            android:summary="@string/pref_theme_colorNote_summary"
            android:title="@string/pref_theme_colorNote"
            app:spectrum_colors="@array/color_choices"
            app:spectrum_outlineWidth="1dp" />

        <ListPreference
            android:defaultValue="light"
            android:entries="@array/pref_theme_titles"
            android:entryValues="@array/pref_theme_values"
            android:key="pref_theme"
            android:title="@string/pref_theme" />

        <com.thebluealliance.spectrum.SpectrumPreference
            android:defaultValue="@color/md_blue_grey_500"
            android:key="pref_theme_colorPrimary"
            android:summary="@string/pref_theme_colorPrimary_summary"
            android:title="@string/pref_theme_colorPrimary"
            app:spectrum_colors="@array/color_choices"
            app:spectrum_outlineWidth="1dp" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_dark_theme"
            android:summary="@string/pref_nightMode"
            android:title="@string/pref_title_nightMode" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_theme_header"
            android:summary="@string/pref_theme_header"
            android:title="@string/pref_title_theme_header" />

    </PreferenceCategory>


</PreferenceScreen>