<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pyozer.myagenda.activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Si nouvelle mise à jour -->
            <android.support.v7.widget.CardView
                android:id="@+id/app_new_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/app_new_update"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_new_update_text" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!-- Titre agenda -->
            <TextView
                android:id="@+id/agenda_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <!-- Séparateur -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/md_grey_600" />

            <!-- Agenda -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/coursRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- Si pas de cours -->
            <android.support.v7.widget.CardView
                android:id="@+id/agenda_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/agenda_empty"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/agenda_empty_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/agenda_empty_text" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
